contrast warnings problem fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -61,7 +61,7 @@
       transform: translateY(calc(1.5em - 100%));
     }
     .tag {
-      @apply bg-grey rounded-full h-fit items-center w-fit p-1 m-0.5;
+      @apply bg-darkGreen rounded-full h-fit items-center w-fit p-1 m-0.5;
     }
     .form-outline {
       @apply m-1 my-4 outline outline-1 outline-white/20 bg-black bg-opacity-80 rounded;
